<resources>
    <string name="app_name">Lufthansa</string>

    <string name="topBarText">Lufthansa Group</string>

    <!-- Flight Status String -->
    <string name="button_flight_status">Flight Status</string>
    <string name="flight_number">flightnumber</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="search_airport">Search Airport</string>
    <string name="select_date">Date</string>
    <string name="select_start_time">Start</string>
    <string name="select_end_time">End</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="flight_search_wdw_title">Lufthansa Group</string>
    <string name="transition">flightLogo</string>

    <!-- Timetable Departure -->
    <string name="departure_timetable">Departures</string>

    <!-- Timetable Arrival -->
    <string name="arrival_timetable">Arrivals</string>

    <!-- MissingParamsDialog Values -->
    <string name="wrongFormat">Wrong format! Please check the date and time selected.</string>
    <string name="missingParams">Missing parameters! Please fill out all fields.</string>

    <string-array name="carrier">
        <item>LH</item>
        <item>EW</item>
        <item>OS</item>
        <item>LX</item>
    </string-array>

</resources>
