<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/lhDeepBlue"
        android:layout_height="400dp"
        android:layout_width="300dp"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/depTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/cabin_medium"
                android:text="@string/departure_timetable"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/arrTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/cabin_medium"
                android:text="@string/arrival_timetable"
                android:textColor="@color/lhBlue4"
                android:textSize="18sp"
                android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/lhSilver">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text"
                app:endIconDrawable="@drawable/ic_cancel_blue_24dp"
                >

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/departuresAirport"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:hint="@string/from"
                    android:layout_margin="10dp"
                    android:inputType="text"
                    android:background="@color/lhSilver"
                    android:textAlignment="textStart"
                    android:fontFamily="@font/cabin_medium"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin_medium"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:text="Set Date"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="horizontal" android:layout_gravity="center_horizontal">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_height="50dp"
                android:layout_width="120dp"
                >

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/ttStartDate"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:hint="@string/select_date"
                    android:layout_margin="10dp"
                    android:layout_marginTop="5dp"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    android:background="@color/lhSilver"
                    android:fontFamily="@font/cabin_medium"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/ttStartDateButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/lhSilver"
                android:src="@drawable/ic_cal"
                android:visibility="visible" />


    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin_medium"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:text="Set times"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="horizontal" android:layout_gravity="center_horizontal">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_height="50dp"
                android:layout_width="60dp"
                >

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/ttStartTime"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:hint="@string/select_start_time"
                    android:layout_margin="10dp"
                    android:layout_marginTop="5dp"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    android:background="@color/lhSilver"
                    android:fontFamily="@font/cabin_medium"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/ttStartTimeButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/lhSilver"
                android:src="@drawable/ic_access_time_black_24dp"
                android:visibility="visible" />

        <com.google.android.material.textfield.TextInputLayout
                android:layout_height="50dp"
                android:layout_width="60dp"
                >

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/ttEndTime"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:hint="@string/select_end_time"
                    android:layout_margin="10dp"
                    android:layout_marginTop="5dp"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    android:background="@color/lhSilver"
                    android:fontFamily="@font/cabin_medium"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/ttEndTimeButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/lhSilver"
                android:src="@drawable/ic_access_time_black_24dp"
                android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="75dp"
            android:layout_margin="10dp">

        <!-- cancel button-->
        <Button
                android:layout_height="50dp"
                android:layout_width="110dp"
                android:layout_margin="10dp"
                android:id="@+id/closeDepSearchBtn"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:background="@drawable/flightsearchbutton"
                android:fontFamily="@font/cabin_medium"
                android:onClick="pressedOnCancelButton"
                android:textSize="12sp"/>

        <!-- serch button-->
        <Button
                android:layout_height="50dp"
                android:layout_width="110dp"
                android:layout_margin="10dp"
                android:id="@+id/searchDepButton"
                android:text="@string/search"
                android:textColor="@color/white"
                android:background="@drawable/flightsearchbutton"
                android:fontFamily="@font/cabin_medium"
                android:onClick="pressedOnSearchButton"
                android:textSize="12sp"/>

    </LinearLayout>
</LinearLayout>