<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_start_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/primary_start_background"
        tools:context=".StartPage">

    <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/primary_toolbar"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/start_toolbar"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_status"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="@android:dimen/notification_large_icon_height"
            android:paddingStart="@android:dimen/app_icon_size"
            android:paddingEnd="@android:dimen/app_icon_size"
            android:background="@drawable/primary_buttonshaper"
            android:fontFamily="@font/cabin_medium"
            android:text="@string/button_flight_status"
            android:textColor="@color/white"
            app:icon="@drawable/ic_flight_logo"
            app:iconPadding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_toolbar" />

        <Button
                android:id="@+id/btn_dep_timetable"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/buttonshaper"
                android:drawableStart="@drawable/ic_flight_takeoff_blue"
                android:fontFamily="@font/cabin_medium"
                android:onClick="onDepartureSearch"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:text="@string/departure_timetable"
                android:textColor="@color/lhDeepBlue"
                android:textSize="14sp"
                android:theme="@style/StartButtons"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_status" />

        <Button
                android:id="@+id/btn_arr_timetable"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/buttonshaper"
                android:drawableStart="@drawable/ic_arrival"
                android:fontFamily="@font/cabin_medium"
                android:onClick="onFlightSearch"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:text="@string/arrival_timetable"
                android:textColor="@color/lhDeepBlue"
                android:textSize="14sp"
                android:theme="@style/StartButtons"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_dep_timetable" />


</androidx.constraintlayout.widget.ConstraintLayout>