<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/statusFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lhSilver">

    <ProgressBar
            android:id="@+id/fsSearchProg"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:visibility="gone"
            android:background="@color/lhGray1"
            android:elevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/divider_fragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/containingMySpinner"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:background="@drawable/textbackground"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:textColorHint="@color/lhDeepBlue"
            android:elevation="1dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeColor="@color/lhDeepBlue"
            app:boxStrokeWidthFocused="3dp"
            app:hintTextColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/flightCarrier"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/cabin_medium"
                android:hint="Carrier"
                android:textColor="@color/lhDeepBlue"
                android:textCursorDrawable="@color/lhDeepBlue" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/buttoncarrier"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="116dp"
            android:layout_marginTop="39dp"
            android:background="@drawable/image_button_background"
            android:elevation="1dp"
            android:src="@drawable/search"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@+id/containingMySpinner"
            app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textColorHint="@color/lhDeepBlue"
            android:background="@drawable/textbackground"
            android:elevation="1dp"
            app:boxStrokeColor="@color/lhDeepBlue"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="2dp"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttoncarrier"
            app:layout_constraintTop_toBottomOf="@+id/view2">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/flightSearchFlightNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:cursorVisible="true"
                android:fontFamily="@font/cabin_medium"
                android:hint="@string/flight_number"
                android:inputType="number"
                android:textAlignment="textStart"
                android:textColor="@color/lhDeepBlue"
                android:textColorHint="@color/lhDeepBlue"
                android:textCursorDrawable="@color/lhDeepBlue" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="or"
            android:textAlignment="center"
            android:textColor="@color/lhDeepBlue"
            android:textSize="16sp"
            android:elevation="1dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <ImageButton
            android:id="@+id/depAirportSearchButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="23dp"
            android:background="@drawable/image_button_background"
            android:elevation="1dp"
            android:src="@drawable/ic_create_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/textbackground"
            android:elevation="2dp"
            android:textColorHint="@color/lhDeepBlue"
            app:boxStrokeColor="@color/lhDeepBlue"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeWidth="0dp"
            app:endIconDrawable="@drawable/ic_cancel_blue_24dp"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/arrSearchButton"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/flightSearchDeparture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:enabled="false"
                android:focusable="false"
                android:fontFamily="@font/cabin_medium"
                android:hint="@string/from"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textAlignment="textStart"
                android:textColor="@color/lhDeepBlue"
                android:textCursorDrawable="@color/lhDeepBlue"
                android:transitionName="airptTransition" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
            android:id="@+id/arrSearchButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="19dp"
            android:elevation="1dp"
            android:background="@drawable/image_button_background"
            android:src="@drawable/ic_create_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/textbackground"
            android:elevation="2dp"
            android:textColorHint="@color/lhDeepBlue"
            app:boxStrokeColor="@color/lhDeepBlue"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="2dp"
            app:endIconDrawable="@drawable/ic_cancel_blue_24dp"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/depAirportSearchButton"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/flightSearchArrival"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/cabin_medium"
                android:hint="@string/to"
                android:inputType="text"
                android:paddingStart="10dp"
                android:layout_margin="10dp"
                android:textAlignment="textStart"
                android:textColor="@color/lhDeepBlue"
                android:textCursorDrawable="@color/lhDeepBlue"
                android:transitionName="airptTransition" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColorHint="@color/lhDeepBlue"
            android:background="@drawable/textbackground"
            android:elevation="1dp"
            app:boxStrokeColor="@color/lhDeepBlue"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="3dp"
            app:hintTextColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/flightSearchDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/cabin_medium"
                android:hint="@string/select_date"
                android:paddingStart="10dp"
                android:textColor="@color/lhDeepBlue"
                android:textCursorDrawable="@color/lhDeepBlue"
                android:cursorVisible="true"
                android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ttSearchDateButton"
            android:layout_width="50dp"
            android:layout_height="55dp"
            android:layout_marginStart="118dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/image_button_background"
            android:elevation="1dp"
            android:src="@drawable/ic_cal"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

    <Button
            android:id="@+id/searchButton"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:background="@drawable/flightsearchbutton"
            android:fontFamily="@font/cabin_medium"
            android:gravity="center"
            android:text="@string/search"
            android:textAlignment="center"
            android:textColor="@color/lhDeepBlue"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintStart_toEndOf="@+id/ttSearchDateButton"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            app:layout_constraintVertical_bias="0.218" />

</androidx.constraintlayout.widget.ConstraintLayout>